syntax = "proto3";

package file_service;

service FileService {
  rpc ListFiles(ListFilesRequest) returns (ListFilesResponse);

  rpc FindFileByName(FindFileByNameRequest) returns (FindFileByNameResponse);
}

message ListFilesRequest {
  // Puedes agregar campos aqu√≠ si es necesario
}

message ListFilesResponse {
  repeated FileInfo file_info = 1;
}

message FileInfo {
  string name = 1;
  int64 size = 2;
  string timestamp = 3;
}

message FindFileByNameRequest {
  string file_name = 1;
}

message FindFileByNameResponse {
  FileInfo file_info = 1;
}
